--- a/packages/catui/src/styles/global.css
+++ b/packages/catui/src/styles/global.css
@@ -1,7 +1,9 @@
 @import url('./tokens.css');
 @import url('./fonts.css');
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   min-width: 0;
   line-height: 1.15; /* 1 */
