--- a/packages/catui/src/components/ThemeProvider/ThemeProvider.css
+++ b/packages/catui/src/components/ThemeProvider/ThemeProvider.css
@@ -22,6 +22,13 @@ body[data-theme='light'] {
   --catui-color-ghost-red: var(--colors-ghost-danger);
 
   --catui-kbd-background-color: var(--colors-kbd);
+
+  --catui-progress-bg: var(--colors-progress-bg);
+
+  --catui-progress-info: var(--colors-progress-info);
+  --catui-progress-success: var(--colors-progress-success);
+  --catui-progress-warning: var(--colors-progress-warning);
+  --catui-progress-danger: var(--colors-progress-danger);
 }
 
 body[data-theme='dark'] {
@@ -48,4 +55,11 @@ body[data-theme='dark'] {
   --catui-color-ghost-red: var(--colors-ghost-danger-dark);
 
   --catui-kbd-background-color: var(--colors-kbd-dark);
+
+  --catui-progress-bg: var(--colors-progress-bg-dark);
+
+  --catui-progress-info: var(--colors-progress-info-dark);
+  --catui-progress-success: var(--colors-progress-success-dark);
+  --catui-progress-warning: var(--colors-progress-warning-dark);
+  --catui-progress-danger: var(--colors-progress-danger-dark);
 }
